<resources>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_name">آسپینو کاربر</string>
    <string name="update">به روز رسانی</string>
    <string name="action_settings">تنظیمات</string>
    <string name="Logo_name">آسپینو</string>
    <string name="Phone_Number">شماره همراه</string>
    <string name="Send">ارسال</string>
    <string name="accep_code">کد تایید</string>
    <string name="firstname">نام</string>
    <string name="lastname">نام خانوادگی</string>
    <string name="education">تحصیلات</string>
    <string name="Expertise">تخصص ها</string>
    <string name="brithday">تاریخ تولد</string>
    <string name="Profile">پروفایل من</string>
    <string name="Yourcommitment">تعهدات شما</string>
    <string name="Ourcommitment">تعهدات ما</string>
    <string name="Messages">پیام ها</string>
    <string name="Answer">سوالات متداول</string>
    <string name="Contact">تماس باما</string>
    <string name="Help">راهنما</string>
    <string name="About">درباره ما</string>
    <string name="Exit">خروج از برنامه</string>
    <string name="Logout">خروج از حساب کاربری</string>
    <string name="Login">ورود به حساب کاربری</string>
    <string name="Job">لیست درخواست های رسیده</string>
    <string name="Duty">فرصت های شغلی امروز</string>
    <string name="Select">انتخاب</string>
    <string name="Cansel">انصراف</string>
    <string name="PerFactor">پیش فاکتور</string>
    <string name="Pause">وقفه</string>
    <string name="Visit">بازدید</string>
    <string name="Resume">ادامه کار</string>
    <string name="Final">اتمام کار</string>
    <string name="MainMenuTitle">آسپینو</string>
    <string name="StepJob">مراحل کاری</string>
    <string name="StepJobdetaile">ملزومات کاری</string>
    <string name="Save">ثبت</string>
    <string name="titleStep">عنوان کاری</string>
    <string name="PriceJob">کارمزد</string>
    <string name="Unit">واحد</string>
    <string name="UnitPrice">هزینه هر واحد</string>
    <string name="StepJobDetaile">ملزومات کاری</string>
    <string name="titleToolsStep">لوازم مصرفی</string>
    <string name="Brand">برند</string>
    <string name="PriceTools">قیمت</string>
    <string name="Credits">کیف پول</string>
    <string name="CreditsGift">دریافت اعتبار هدیه</string>
    <string name="Delete">حذف</string>
    <string name="RefreshAcceptCode">دریافت مجدد کد تایید</string>
    <string name="TextAbout">درباره آسپینو </string>
    <string name="TextYourCommitment">تعهدات شما</string>
    <string name="TextOurCommitment">تعهدات ما</string>
    <string name="ListVisit">بازدیدهای ثبت شده</string>
    <string name="servicename">نام سرویس</string>
    <string name="ServiDetailName">نوع سرویس</string>
    <string name="Add">افزودن</string>
    <string name="FinalSave">ثبت نهایی</string>
    <string name="value">مقدار</string>
    <string name="TitleTools">عنوان ملزومات</string>
    <string name="CheckTitleTool">آیا فاکتور ملزومات دارد؟</string>
    <string name="Description">توضیحات</string>
    <string name="Total">جمع</string>
    <string name="CaseResume">علت وقفه</string>
    <string name="CasePause">علت وقفه</string>
    <string name="CodeMoaref">کد معرف (اختیاری)</string>
    <string name="service">سرویس</string>
    <string name="credite">اعتبار</string>
    <string name="home">خانه</string>
    <string name="DutyItem">وظایف</string>
    <string name="RecentCredit">اعتبار فعلی:</string>
    <string name="IncreseCredit">افزایش اعتبار</string>
    <string name="History">سفارشات درخواستی </string>
    <string name="RelateUs">به ما بپیوندید!</string>
    <string name="telegram">تلگرام</string>
    <string name="instagram">اینستاگرام</string>
    <string name="service_request">ثبت درخواست</string>
    <string name="Desired_service">سرویس درخواستی</string>
    <string name="FromDate">از تاریخ</string>
    <string name="ToDate">تا تاریخ</string>
    <string name="FromTime">از ساعت</string>
    <string name="ToTime">تا ساعت</string>
    <string name="Type">نوع</string>
    <string name="Healing">درمانی</string>
    <string name="status">وضعیت</string>
    <string name="normal">عادی</string>
    <string name="emergency">فوری</string>
    <string name="CountWoman">تعداد زن</string>
    <string name="CountMan">تعداد مرد</string>
    <string name="Doesnotmatter">فرقی نمی کند</string>
    <string name="Addres">آدرس</string>
    <string name="AddresManagement">مدیریت آدرس ها</string>
    <string name="SaveLocation">ثبت و ذخیره آدرس</string>
    <string name="Search">جستجو</string>
    <string name="usercode">کد کاربری</string>
    <string name="state">استان</string>
    <string name="city">شهر</string>
    <string name="Email">ایمیل (اختیاری)</string>
    <string name="Order">پیگیری سفارشات</string>
    <string name="SeachService">جستجو سرویس</string>
    <string name="nameLocation">نام این آدرس</string>
    <string name="IsDefaultAddress">آدرس بصورت پیش فرض در نظر گرفته شود</string>
    <string name="edit">ویرایش</string>
    <string name="EditLocation">ویرایش</string>
    <string name="SavedAddress">آدرس های ثبت شده</string>
    <string name="ServicePeriod">خدمت دوره ای</string>
    <string name="Daily">روزانه</string>
    <string name="Weekly">هفتگی</string>
    <string name="Middle_of_the_week">هفته در میان</string>
    <string name="Monthly">ماهانه</string>
    <string name="Graid">پایه تحصیلی</string>
    <string name="FieldEducation">رشته تحصیلی</string>
    <string name="Male">آقا</string>
    <string name="Female">خانم</string>
    <string name="GenderStudent">جنسیت دانش آموز</string>
    <string name="GenderTeacher">جنیست معلم</string>
    <string name="TitleLearning">عنوان آموزش</string>
    <string name="FieldArt">رشته هنری</string>
    <string name="Other">سایر</string>
    <string name="Savari">سواری</string>
    <string name="Shasi">شاسی و نیم شاسی</string>
    <string name="Van">ون</string>
    <string name="Roshoie">روشویی</string>
    <string name="RoshoieAndToShoie">روشویی و توشویی</string>
    <string name="TypeService">نوع خدمت</string>
    <string name="TypeCar">نوع ماشین</string>
    <string name="Language">زبان</string>
    <string name="ListOrder">سرویس های ثبت شده</string>
    <string name="SignUp">ثبت نام</string>
    <string name="service_request_saved">درخواست ثبت شده</string>
    <string name="showfactor">مشاهده فاکتور</string>
    <string name="QuestionFactor">آیا فاکتور مورد تایید می باشد؟</string>
    <string name="Yes">بله</string>
    <string name="No">خیر</string>
    <string name="Invite_friends">اشتراک گذاری</string>
    <string name="TermsـandـConditions">قوانین و مقررات</string>
    <string name="emergencyService">درخواست اضطراری</string>
    <string name="AcceptOrder">پذیرفته شده ها</string>
    <string name="EditOrder">اصلاح درخواست</string>
    <string name="RefreshOrder">درخواست مجدد</string>
    <string name="CallHamyar">تماس با همیار</string>
    <string name="CallSupporter">تماس با پشتیبانی</string>
    <string name="InfoContent">اطلاعات تماس</string>
    <string name="SendMessage">ارسال پیام</string>
    <string name="Call">برقراری تماس</string>
    <string name="CurrencyInsertCredit">مبلغ افزایش اعتبار</string>
    <string name="cash">پرداخت</string>
    <string name="ListMessagesRecive">پیام های دریافتی</string>
    <string name="NotMessage">پیامی موجود نیست</string>
    <string name="MessageText">متن پیام</string>
    <string name="ListGift">لیست هدایا</string>
    <string name="Register">فرم ثبت نام کاربر</string>
    <string name="InfoHamyar">مشخصات همیار</string>
    <string name="CodeDesired_service">کد سفارش</string>
    <string name="SarviceOrder">ثبت سفارش</string>
    <string name="LoginOrSignUp">ورود/ثبت نام</string>
    <string name="Date">تاریخ</string>
    <string name="Time">زمان</string>
    <string name="CountExpert">تعداد  متخصص</string>
    <string name="GenderExpert">جنسیت متخصص</string>
    <string name="NeedTimeJob">مدت زمان کار مورد نیاز</string>
    <string name="ListAnswer">سوالات متداول</string>
    <string name="NotAnswer">سوالی موجود نیست</string>
    <string name="AddresSave">ثبت آدرس</string>
    <string name="NumberShenasname">شماره شناسنامه</string>
    <string name="CodeMelli">کد ملی</string>
    <string name="Mobile">شماره همراه</string>
    <string name="NumberPhone">شماره ثابت</string>
    <string name="Gender">جنسیت</string>
    <string name="man">مرد</string>
    <string name="woman">زن</string>
    <string name="RealOrLegal">حقیقی/حقوقی</string>
    <string name="Rating">ثبت امتیاز</string>
    <string name="SendRate">ثبت امتیاز</string>
    <string name="RefreshCode">ارسال مجدد کد فعالسازی</string>
    <string name="content_page_changecurrency">پس از بررسی متخصص هزینه نهایی سفارش شما مبلغ زیر می باشد آیا مورد تایید شما هست؟</string>
    <string name="change_currency">تغییر قیمت</string>
    <string name="Previous_Customer_Reviews">نظرات مشتریان قبلی</string>
    <string name="save_comment">نظر ثبت شده است</string>
    <string name="by">توسط:</string>
    <string name="InDate">در تاریخ:</string>
    <string name="ServiDetaile">جزئیات سفارش</string>
    <string name="Add_New_Address">ثبت آدرس جدید</string>
    <string name="Select_Hamyar">انتخاب متخصص</string>
    <string name="Cansel_Service">لغو درخواست</string>
    <string name="AboutUsHeadText">آسپینو ، بازار خدمات آنلاین</string>
    <string name="AboutUsDescText">سرما و گرما ، در هر فصل غافلگیرتان می کند ؟ مهمان دارید و خانه تان آماده نیست ؟ لباس های بی اتو تلنبار شده اند ؟ همه این نیاز ها به کنار نیاز به آرامش دارید ؟ ما متوجه نیاز شما شده ایم پلی ساخته ایم میان شما و سرویس کارانی خوش نام تا بتوانید با انتخابی آگاهانه خدمت مورد نظرتان را به سادگی و قیمتی به صرفه ، دریافت کنید</string>
    <string name="WebSite">وب سایت</string>
    <string name="ProfileEdit">ویرایش اطلاعات کاربری</string>
    <string name="CallSupport">تماس با پشتیبانی</string>
    <string name="ExitAccount">خروج از حساب کاربری</string>
    <string name="Detail_Hamyar">جزيیات متخصص</string>
    <string name="AcceptAndSelectHamyar">تایید و انتخاب متخصص</string>
    <string name="Survey">نظرسنجی</string>
    <string name="Estimated_price">هزینه حدودی</string>
    <string name="FinalCurrency2">هزینه نهایی</string>
    <string name="Discount">تخفیف</string>
    <string name="FinalCurrency">مبلغ نهایی</string>
    <string name="CachFactor">پرداخت هزینه</string>
    <string name="peigiri">پیگیری سفارشات</string>
    <string name="Service_Run">درحال انجام</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SearchService">جستجو خدمت مورد نظر</string>
    <string name="DetailAddres">جزئیات آدرس جهت مسیریابی متخصص</string>
    <string name="NewAddresSave">ثبت آدرس جدید</string>
    <string name="DateAndTime">ساعت و تاریخ حضور متخصص</string>
    <string name="DescriptionCompletly">توضیحات تکمیلی</string>
    <string name="DescriptionForHamyar">هر چیزی که متخصص باید از اون اطلاع داشته باشد رو اینجا بنویسید</string>
    <string name="SuccessfulService">سفارش شما با موفقیت ثبت شد</string>
    <string name="MessageFindHamyar">در حال جستجوی بهترین متخصص برای درخواست شما هستیم لطفا تا ارسال پیشنهاد متخصصین شکیبا باشید</string>
    <string name="CodeOrderService">کد سفارش:</string>
    <string name="wallet">کیف پول</string>
    <string name="open">باز</string>
    <string name="close">بسته</string>
    <string name="detailorder">جزئیات سفارش</string>
    <string name="DoSelect">انتخاب کنید</string>
    <string name="SignUpInAspino">ثبت نام در آسپینو</string>
    <string name="brithdayEkhtiari">تاریخ تولد (اختیاری)</string>
    <string name="LinkUrl"><a href=" http://aspino.ir/">قوانین و مقررات</a>
</string>
    <string name="Toman">تومان</string>
    <string name="OffCode">کد تخفیف</string>
    <string name="Select_this_Hamyar">انتخاب این متخصص</string>
    <string name="saved_comment">نظرات ثبت شده:</string>
    <string name="HistoryJob">سابقه کار:</string>
    <string name="infoPersonal">مشخصات فردی</string>
    <string name="Firstname">نام:</string>
</resources>