<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/simpleback"
    android:layoutDirection="rtl">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="#ffff"
            android:background="#6831d5">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btnback"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"/>
        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/ScrollLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:verticalScrollbarPosition="right">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="@drawable/rounded_layout_select_job_body">
            <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/logo"
            android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tvTextAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/AboutUsHeadText"
                android:textSize="18dp"
                android:drawableRight="@drawable/aboutsmile"
                android:textColor="#fff"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tvTextAboutDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/AboutUsDescText"
                android:textSize="18dp"
                android:textColor="#fff"
                android:textAlignment="gravity"
                android:gravity="right"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/telegicon"
                    android:layout_gravity="center"/>
                    <TextView
                        android:id="@+id/tvTextTelegram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telegram"
                        android:textSize="18dp"
                        android:textColor="#fff"
                        android:layout_marginRight="6dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/webicon"
                    android:layout_gravity="center"/>
                    <TextView
                        android:id="@+id/tvTextWebSite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/WebSite"
                        android:textSize="18dp"
                        android:textColor="#fff"
                        android:layout_marginRight="0dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/instaicon"
                    android:layout_gravity="center"/>
                    <TextView
                        android:id="@+id/tvTextInsta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instagram"
                        android:textSize="18dp"
                        android:textColor="#fff"
                        android:layout_marginRight="0dp"/>
                </LinearLayout>
            </LinearLayout>
            <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
                <!--android:id="@+id/map3"-->
                <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="200dp"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_marginBottom="35dp"/>-->
        </LinearLayout>

    </ScrollView>
    <FrameLayout
    android:id="@+id/frame"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="80dp"-->
        <!--android:layout_alignParentBottom="true">-->
        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/Order"-->
            <!--android:id="@+id/btnOrderBottom"-->
            <!--android:background="@drawable/rounded_button"-->
            <!--android:textColor="#052d93"-->
            <!--android:layout_weight="1"-->
            <!--android:drawableTop="@drawable/job2"/>-->
        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/AcceptOrder"-->
            <!--android:id="@+id/btnAcceptOrderBottom"-->
            <!--android:background="@drawable/rounded_button"-->
            <!--android:textColor="#052d93"-->
            <!--android:layout_weight="1"-->
            <!--android:drawableTop="@drawable/duty2"/>-->
        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/Credits"-->
            <!--android:id="@+id/btncrediteBottom"-->
            <!--android:background="@drawable/rounded_button"-->
            <!--android:textColor="#052d93"-->
            <!--android:layout_weight="1"-->
            <!--android:drawableTop="@drawable/credit2"/>-->
    <!--</LinearLayout>-->
</RelativeLayout>
